--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Literature, Modern -- 19th century -- Periodicals'
 - !lcsh 'Science -- History -- Periodicals'
 - !lcc 'AP'
+- GITenberg
 title: The International Monthly, Volume 4, No. 3, October, 1851
 url: http://www.gutenberg.org/ebooks/36564
